# hyx-core

./: .gitignore  BUILD.md  MANIFEST-core.in  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  analyze_genova.py  build_core.py  converter.py  extract_tiles.py  foo.json  generate_module.py  genova_analysis_results.json  genova_tile_analysis_report.md  main.py  pyproject-core.toml  pyproject.toml  requirements.txt  setup.py  test_tiling.py  tile_comparison.json  tile_metadata.txt  tiles_metadata.txt
docs/: TILING_GUIDE.md
examples/: extract_tiles_example.py
pcd_hyperaxes/: __init__.py  __main__.py  cli.py  tui.py  tui.tcss
pcd_hyperaxes/core/: analysis.py  clustering.py  io.py  preprocessing.py  registration.py  tiling.py
pcd_hyperaxes/llm/: __init__.py  chat.py  executor.py  state.py  tools.py  webviewer.py
pcd_hyperaxes/output/: formatters.py
pcd_hyperaxes/utils/: logging.py  validation.py
pcd_hyperaxes/visualization/: heatmap.py  viewer.py
pcd_hyperaxes_core/: __init__.py  __main__.py  cli.py  config.py  tui.py  tui.tcss
pcd_hyperaxes_core/core/: analysis.py  clustering.py  io.py  preprocessing.py  registration.py  tiling.py
pcd_hyperaxes_core/llm/: __init__.py  chat.py  executor.py  state.py  tools.py  webviewer.py
pcd_hyperaxes_core/output/: formatters.py  models.py
pcd_hyperaxes_core/utils/: logging.py
pcd_hyperaxes_core/visualization/: heatmap.py  viewer.py
