[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcd-hyperaxes-core"
version = "1.0.0"
description = "Point cloud analysis module for difference detection and comparison"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Nicola Sabino", email = "nicola.sabino@hyperaxes.com" }
]
maintainers = [
    { name = "Nicola Sabino", email = "nicola.sabino@hyperaxes.com" }
]
license = { text = "MIT" }
keywords = ["point-cloud", "3d", "lidar", "comparison", "analysis", "open3d", "hyperaxes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "open3d>=0.17.0",
    "laspy>=2.3.0",
    "textual>=0.47.0",
]

[project.scripts]
pcd-hyperaxes = "pcd_hyperaxes_core.cli:main"
pcd-hyperaxes-tui = "pcd_hyperaxes_core.tui:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[tool.pyright]
include = ["*.py"]
exclude = [
    "**/__pycache__",
    ".venv",
    "build",
    "dist",
]
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.9"
pythonPlatform = "Darwin"
venvPath = "."
venv = ".venv"

[tool.ruff]
# Lunghezza massima delle linee
line-length = 100

# Python version target
target-version = "py39"

# File e directory da escludere
exclude = [
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
# Regole da abilitare
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]

# Regole da ignorare
ignore = [
    "E501",  # line too long (gestito da line-length)
]

[tool.ruff.lint.isort]
known-first-party = ["pcd_hyperaxes_core"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pcd_hyperaxes_core*"]
exclude = ["tests*", "docs*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    ".venv",
    "build",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
